Added bottom nav bar

--- a/public_html/resources/style.css
+++ b/public_html/resources/style.css
@@ -69,9 +69,27 @@
 {
     float: right;
     background-color: #333333;
-    height: 96%;
+    height: 95%;
     width: 35%;
     margin-right: 10%;
     margin-top: -45%;
-    border-style: solid;
+    border-style: solid;    
+     
+}
+
+
+#menuLow
+{
+    background-color: #000000;
+    color: white;   
+    width: 85.5%;    
+    margin-left: 5%;
+    font-family: Impact, Charcoal, sans-serif;
+}
+
+.myTr
+{
+    padding: 15px;
+    text-align: center;
+    
 }
