--- a/public_html/resources/style.css
+++ b/public_html/resources/style.css
@@ -19,6 +19,8 @@
 .perTd
 {
     padding: 20px;    
+    cursor: -webkit-grab;
+    cursor: grab;
 }
 
 #myTh
@@ -46,7 +48,8 @@
     background-color: #333333;
     border-style: solid;
     height: 450px;
-    margin-left: 12%;    
+    margin-left: 12%;  
+    text-align: center;
 }
 
 #bloqueleft2
@@ -57,6 +60,7 @@
     height: 450px;
     margin-left: 12%;    
     float: left;
+    text-align: center;
 }
 
 .separador
@@ -74,7 +78,7 @@
     margin-right: 10%;
     margin-top: -45%;
     border-style: solid;    
-     
+    text-align: center; 
 }
 
 
@@ -91,5 +95,33 @@
 {
     padding: 15px;
     text-align: center;
-    
+    cursor: -webkit-grab;
+    cursor: grab;
+}
+
+#myFooter
+{
+    margin-bottom: -5%;
+}
+
+#right1
+{
+    margin-top: 12%;    
+    width: 74%;
+    color: white;
+    background-color: black;
+    border:3px solid grey;
+    height: 40%;
+    margin-left: 12%;    
+}
+
+#right2
+{
+    margin-top: 15%;    
+    width: 74%;
+    color: white;
+    background-color: black;
+    border:3px solid grey;
+    height: 40%;
+    margin-left: 12%;    
 }
